<resources>
    <string name="app_name">费曼学习 Android 套壳</string>
    <string name="action_back">返回</string>
    <string name="action_home">首页</string>
    <string name="action_refresh">刷新</string>
    <string name="action_config">配置</string>
    <string name="action_retry">重试</string>
    <string name="enable_optimization">开启优化</string>
    <string name="disable_optimization">关闭优化</string>
    <string name="error_title">页面加载失败</string>
</resources>
